tests/paczka1/fuzzy1/14573974.err
Error in line 1: tzt A344 6,3
Error in line 3: tzt S678 46,7
Error in line 2: D6Zx A344 50,6
Error in line 12: rqEdTNAUE S678 63,3
Error in line 9: D6Zx A344 45,6
Error in line 24: D6Zx A710 11,3
